Fix alignment in firefox

--- a/stylesheets/_common.scss
+++ b/stylesheets/_common.scss
@@ -32,7 +32,6 @@ body{
         padding-left: 0;
         padding-right: 0;
         width: 50%;
-        float: left;
         color: #006ff0;
     }
     
