--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -21,7 +21,6 @@ body {
     padding-left: 0;
     padding-right: 0;
     width: 50%;
-    float: left;
     color: #006ff0; }
   #title .name:nth-child(2) {
     text-align: right;
